crates/polychem/src/atoms/snapshots/polychem__atoms__atomic_database__tests__fail_parsing_atomic_database.snap
---
source: crates/polychem/src/atoms/atomic_database.rs
description: res
expression: out
---
  × error parsing KDL

Error: 
  × unexpected node `dark-matter`
   ╭─[test:1:1]
 1 │ dark-matter
   · ─────┬─────
   ·      ╰── unexpected node
   ╰────

Error: 
  × child node `elements` is required
