crates/polychem/src/atoms/snapshots/polychem__atoms__atomic_database__tests__nonzero_bool.snap
---
source: crates/polychem/src/atoms/atomic_database.rs
description: res
expression: out
---
  × error parsing KDL

Error: 
  × expected a non-zero, decimal integer, found boolean
   ╭─[test:1:9]
 1 │ nonzero false
   ·         ──┬──
   ·           ╰── unsupported value
   ╰────
